[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "A sandbox project"
authors = ["David Ojeda <david.ojeda@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-docker = "^0.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
